fix breadcrumb layout on small screens

--- a/src/static/sass/header/_header.scss
+++ b/src/static/sass/header/_header.scss
@@ -42,6 +42,11 @@ $dropdownWidth: $accountWidth;
 
     @media screen and (max-width: $break-medium) {
       width: $logoWidth * 0.9;
+      height: 115px;
+    }
+
+    @media screen and (max-width: $break-small) {
+      height: 110px;
     }
 
     &:hover {
